Update privacy policy details and third-party services

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Qityol Lite — Privacy Policy</title>
     <link rel="stylesheet" href="privacy-policy.css" />
-    <!-- Remove Google substitute font -->
     <style>
         @font-face {
             font-family: 'Qurova';
@@ -24,7 +23,7 @@
 <body>
     <header>
         <div class="logo">Qityol Lite</div>
-        <p>Last Updated: November 2025</p>
+        <p>Last Updated: January 2026</p>
     </header>
 
     <main>
@@ -46,24 +45,28 @@
         <p>We use your approximate or precise location <strong>to show nearby bookclubs</strong> and improve
             community-based recommendations. Location is never shared with third parties.</p>
 
+        <h3>4. SMS and Messaging Access</h3>
+        <p>We collect and use your mobile phone number <strong>solely for account verification and security</strong>. We send one-time verification codes (OTP) via text message to confirm your identity during sign-up or login. Your phone number is not used for marketing purposes.</p>
+
         <h2>How We Use Your Information</h2>
         <ul>
             <li>To enable ISBN scanning using the camera</li>
             <li>To power voice search functionality</li>
             <li>To suggest bookclubs near your current location</li>
+            <li>To verify your identity via SMS for secure login</li>
             <li>To improve app performance and user experience</li>
         </ul>
 
         <h2>Data Storage & Security</h2>
         <p>We do not store camera or microphone data. Location data is used temporarily and never saved permanently. All
-            other app data is securely stored using industry-standard encryption.</p>
+            other app data, including verification numbers, is securely stored using industry-standard encryption.</p>
 
         <h2>Third-Party Services</h2>
-        <p>Qityol Lite may use third-party services such as Firebase, Supabase, or analytics tools. These services may
-            collect anonymous usage data to help us improve the app.</p>
+        <p>Qityol Lite may use third-party services such as Firebase, Supabase, or Twilio. These services may
+            collect necessary data to help us provide authentication and improve the app.</p>
 
         <h2>Your Rights</h2>
-        <p>You may revoke camera, microphone, or location permissions at any time from your device settings. Some
+        <p>You may revoke camera, microphone, location, or messaging permissions at any time from your device settings. Some
             features may stop working without these permissions.</p>
 
         <h2>Changes to This Policy</h2>
