Revise SMS access terms with platform names
Updated the SMS and Messaging Access section to include platform agreement details.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             community-based recommendations. Location is never shared with third parties.</p>
 
         <h3>4. SMS and Messaging Access</h3>
-        <p>We collect and use your mobile phone number <strong>solely for account verification and security</strong>. We send one-time verification codes (OTP) via text message to confirm your identity during sign-up or login. Your phone number is not used for marketing purposes.</p>
+        <p>By using our platform(s)"Qityol Mobility" "Qityol Lite" "Heart and Home AFH LLC" "TheVillage", you agree to these terms. We collect and use your mobile phone number <strong>solely for account verification and security</strong>. We send one-time verification codes (OTP) via text message to confirm your identity during sign-up or login. Your phone number is not used for marketing purposes.</p>
 
         <h2>How We Use Your Information</h2>
         <ul>
